feat: AgentLoop 注入长期记忆到系统提示，run 增加 userId 参数